--- a/index.html
+++ b/index.html
@@ -17,15 +17,26 @@
 
  CABELO: em nossa loja temos toda a linha da Eudora e do O Boticário para um cronograma capilar
  perfeito, deixando seu cabelo saudável e bem hidratado.
-   Em nossa loja contém shampoo detox, shampoo de nutrição, hidratação, reconstrução, antifrizz
-tendo também para cabelos com químicas e cabelos com cortes químicos.
-   Temos nossos kits contendo todas as partes do cronograma capilar desde o pré-poo até óleos
-finalizadores. Além de termos todas essas coisa, temos também leve-in, protetor térmico, tônicos
-para crescimento , óleos com proteção térmica e finalizadores, contendo até esfoliante capilar.
+   Em nossa loja contém shampoo detox, shampoo de nutrição, hidratação, reconstrução, antifrizz tendo
+também para cabelos com químicas e cabelos com cortes químicos.
+   Temos nosso kits contendo todas as partes do cronograma capilar desde o pré-poo até óleos 
+finalizadores. Além de termos todas essas coisas, temos também leve-in, protetor térmico,
+tônicos para o crescimento, óleos com proteção termica e finalizadores, contendo até esfoliante capilar.
 
- PERFUME: em nossa loja temos grandes variedades de perfumes tanto feminino quanto masculino e 
- até mesmo uma linha infantil, tendo como a linha Sophie e Botica do coração.
-   Temos perfumes, colônias, body splash e desodorante colônia. Sendo assim as linhas mais
-vendidas da Natura é (Ília, Una, Essencial)
+ PERFUME: em nossa loja temos grandes variedades de perfumes tanto feminino quanto masculino e até mesmo 
+ uma linha infantil, tendo como a linha Sophie e Botica do Coração.
+   Temos perfumes, colônias, body splash e desodorante colônia. Sendo assim as linhas mais vendidas 
+da natura é (ília, una, essencial, e kaiak), já a linha do O Boticário temos (lilly, elizee, floratta, 
+malbeck, glamuor, egeo, zaad, e nativa spaa), na linha da Eudora temos (instance, e diva). Sendo assim
+essas linhas e essas marcas brasileiras são as mais vendidas e com um preço mais acessível.
+  Em nossa loja temos também uma marca de perfumes importados sendo ela a de Paco Rabenne, tendo 
+perfumes femininos e masculinos, sendo assim os perfumes mais vendidos são (invictus, phantom, lady million,
+pure xs, e olympea).
+
+
+  Lembrando que toda sexta temos descontos de 25% nas compras acima de R$130,00, além disso quando
+o cliente alcança até 7 compras damos cupom de desconto para uma melhor experiência para nossos clientes.
+  Além de termos o melhor preço, a cada compra nossos clientes ganham brindes e contando também com um bom
+café da manhã, pensando sempre no conforto para nossos clientes.
 </body>
 </html>
